@@ -97,6 +97,7 @@ All (GUI):
 - wxRTC: added ForceDelayedLayout to override delayed layout for large buffers.
 - wxRTC: fixed wxRichTextCtrl::Replace() to use specified range instead of selection.
 - wxRTC: indent dialog no longer ignores first-line indent if no indent specified.
+- wxRTC: improved outline and line spacing controls, and added page break control.
 - Fixed buffer overrun when saving ICO image with a width that's not a multiple of 4.
 - Fixed wxOwnerDrawnComboBox/wxBitmapComboBox client data corruption when
   wxCB_SORT is used.
